# tirelire

./: .gitignore  Dockerfile  LICENSE  README.md  dddpy.excalidraw  dev-database.conf  docker-compose.yml  nginx.conf  package.json  pyproject.toml  scripts.py  views.excalidraw
.github/workflows/: python-run-tests.yaml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test-redis-checkpoint.ipynb
app/: bootstrap.py  config.py  default_config.yaml  default_logging.ini
app/adapters/event_publisher/: redis_event_publisher.py
app/adapters/orm/: __init__.py  orm.py
app/adapters/repository/: __init__.py
app/api/: __init__.py  run.py
app/api/routers/: __init__.py  account.py
app/api/schemas/: __init__.py  input.py
app/domain/: __init__.py  account.py  category.py  currency.py  transaction.py
app/domain/account/: __init__.py  account.py  account_exceptions.py  account_repository.py
app/domain/commands/: __init__.py  commands.py
app/domain/events/: __init__.py  events.py
app/domain/model/: __init__.py  (+4 more)
app/entrypoints/: __init__.py
app/infrastructure/: orm.py
app/repositories/: __init__.py
app/service/: services.py  unit_of_work.py
app/service_layer/: session_factory.py  unit_of_work.py
app/views/: __init__.py  account.py  account_holder.py  holder.py
libs-dev/: scripts.py
tests/: test_config.yaml
tests/domain/: test_account.py  test_transaction.py
tests/e2e/: test_api.py
tests/integration/: test_account_repository.py  test_account_uow.py  test_holder_repository.py
tests/unit/: tests_account.py  tests_commands.py  tests_holder.py  tests_service.py  tests_transaction.py
tirelire-account/: Dockerfile  pyproject.toml
tirelire-account/app/: bootstrap.py  config.py  default_config.yaml
tirelire-account/app/adapters/: __init__.py
tirelire-account/app/adapters/event_publisher/: __init__.py  redis_event_publisher.py
tirelire-account/app/adapters/orm/: __init__.py  orm.py
tirelire-account/app/adapters/repository/: __init__.py
tirelire-account/app/adapters/repository/holder_repository/: __init__.py
tirelire-account/app/certs/: public-key.pem
tirelire-account/app/domain/commands/: commands.py
tirelire-account/app/domain/model/: holder.py
tirelire-account/app/domain/repository/: __init__.py
tirelire-account/app/entrypoints/api/: __init__.py  client.py
tirelire-account/app/entrypoints/api/routers/: holder.py
tirelire-account/app/entrypoints/event_listener/: redis_event_listener.py
tirelire-account/app/service_layer/: factory.py
tirelire-account/app/service_layer/handlers/: __init__.py  handlers.py
tirelire-account/app/service_layer/handlers/commands/: commands.py
tirelire-account/app/service_layer/handlers/events/: __init__.py
tirelire-account/app/service_layer/messagebus/: __init__.py  messagebus.py
tirelire-account/app/service_layer/unit_of_work/: __init__.py  sqlalchemy_uow.py  unit_of_work.py
tirelire-account/app/views/: __init__.py  holder.py
tirelire-account/tests/: conftest.py
tirelire-account/tests/e2e/: test_api.py
tirelire-account/tests/integration/: test_account_uow.py  test_holder_repository.py
tirelire-account/tests/unit/: test_account.py  test_commands.py  test_holder.py  test_transaction.py  tests_commands.py  tests_transaction.py
tirelire-auth/: Dockerfile  pyproject.toml
tirelire-auth/app/: config.py  default_config.yaml
tirelire-auth/app/adapters/: orm.py  redis_event_publisher.py  repository.py
tirelire-auth/app/adapters/repository/: __init__.py  repository.py
tirelire-auth/app/certs/: private-key.pem
tirelire-auth/app/domain/: commands.py  events.py
tirelire-auth/app/domain/model/: __init__.py  application.py  exceptions.py  user.py
tirelire-auth/app/entrypoints/api/: routers.py  schema.py
tirelire-auth/app/entrypoints/event_listener/: redis_event_listener.py
tirelire-auth/app/service_layer/auth_service/: __init__.py  auth_service.py  token_encryption.py
tirelire-auth/app/service_layer/handlers/: __init__.py  handlers.py
tirelire-auth/app/service_layer/unit_of_work/: default_factory.py  sqlalchemy_uow.py  unit_of_work.py
tirelire-auth/tests/: private-test-key.pem
tirelire-auth/tests/e2e/: test_client.py
tirelire-auth/tests/integration/: test_repository.py
tirelire-auth/tests/unit/: test_handlers.py  test_model.py
tirelire-ml-cat-operation/: Dockerfile  pyproject.toml
tirelire-ml-cat-operation/app/: default_config.yaml  default_logging.ini
tirelire-user/: Dockerfile  pyproject.toml
tirelire-user/app/: bootstrap.py  config.py  default_config.yaml
tirelire-user/tests/: public-test-key.pem  test_config.yaml
tirelire-web-backend/: pyproject.toml  scripts.py
tirelire-web-backend/app/: config.py  default_config.yaml  factory.py
tirelire-web-backend/app/adapters/api/: __init__.py  auth.py  user.py
tirelire-web-backend/app/adapters/api/auth/: __init__.py  auth_gateway.py  auth_tirelire.py
tirelire-web-backend/app/adapters/session_manager/: __init__.py  redis_session_manager.py  session_manager.py
tirelire-web-backend/app/entrypoints/api/: client.py  middleware.py  settings.py
tirelire-web-backend/app/entrypoints/api/routers/: __init__.py
tirelire-web-backend/app/entrypoints/api/routers/v1/: _router.py  router.py  schemas.py  security.py
tirelire-web-backend/app/entrypoints/api/v1/: router.py
tirelire-web-backend/app/entrypoints/api/v1/user/: router.py  schemas.py
tirelire-web-backend/app/model/: commands.py
tirelire-web-backend/app/service_layer/: authentication_service.py  unit_of_work.py
tirelire-web-backend/tests/e2e/: test_client.py
tirelire-web-frontend/: .env  .eslintrc.json  Dockerfile  index.html  package.json  vite.config.js
tirelire-web-frontend/src/: App.vue  auth.js  config.js  main.js
(+103 files in other folders)
