[tool.poetry]
name = "tirelire-app"
version = "0.0.1"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
packages = [
  { include = "./scripts.py" }
]

[tool.poetry.dependencies]
python = "3.9.10"
SQLAlchemy = "^1.4.29"
fastapi = "^0.72.0"
psycopg2-binary = "^2.9.3"
envyaml = "^1.10.211231"
uuid = "^1.30"
uvicorn = "^0.17.0"
redis = "^4.1.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
coverage = {version = "^6.2", extras = ["toml"]}
unittest = "^0.0"
"testing.postgresql" = "^1.3.0"
parameterized = "^0.8.1"
jupyter = "^1.0.0"
"testing.redis" = "^1.1.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'scripts:test'
report = 'scripts:report'
format = 'scripts:format'

[tool.coverage.run]
source=['app']
omit=['*/__init__.py']

[tool.coverage.report]
exclude_lines=[
    "pragma: no cover",
    "raise NotImplementedError"
]
