[tool.poetry]
name = "tirelire-auth"
version = "0.0.1"
description = ""
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
packages = [
  { include = "scripts.py", from="../libs-dev"}
]

[tool.poetry.dependencies]
python = "3.10.0"
SQLAlchemy = "^1.4.29"
fastapi = "^0.72.0"
psycopg2-binary = "^2.9.3"
envyaml = "^1.10.211231"
uuid = "^1.30"
uvicorn = "^0.17.0"
redis = "^4.1.2"
requests = "^2.27.1"
bcrypt = "^3.2.0"
PyJWT = "^2.3.0"
ecdsa = {version = "^0.17.0", extras = ["gmpy2"]}
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]
coverage = {version = "^6.2", extras = ["toml"]}
"testing.postgresql" = "^1.3.0"
"testing.redis" = "^1.1.1"
parameterized = "^0.8.1"
black = "^22.1.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]

  [tool.poe.tasks.fmt]
  help = "Run black on the code base"
  cmd  = "black app"

  [tool.poe.tasks.test]
  help = "Run test coverage on the code base and display the coverage's report"
  shell = """
    python -m coverage run -m unittest discover
    python -m coverage report
  """

[tool.coverage.run]
source=['app']
omit=['*/__init__.py']

[tool.coverage.report]
exclude_lines=[
    "pragma: no cover",
    "raise NotImplementedError"
]
