[tool.poetry]
name = "tirelire-web-backend"
version = "0.0.1"
description = "Backend for tirelire web application"
authors = ["AgRenaud <renaud.aguirrechambilla@gmail.com>"]
packages = [
  { include = "scripts.py", path = "../libs-dev"}
]

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "^0.72.0"
envyaml = "^1.10.211231"
uvicorn = "^0.17.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
coverage = {version = "^6.2", extras = ["toml"]}
unittest = "^0.0"
"testing.postgresql" = "^1.3.0"
parameterized = "^0.8.1"
jupyter = "^1.0.0"
"testing.redis" = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'scripts:test'
report = 'scripts:report'
format = 'scripts:format'

[tool.coverage.run]
source=['app']
omit=['*/__init__.py']

[tool.coverage.report]
exclude_lines=[
    "pragma: no cover",
    "raise NotImplementedError"
]
